Deployment/k8/networking/nginx-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
 replicas: 1
 selector:
   matchLabels:
    name: nginx-ingress
 template:
   metadata:
     name: nginx-ingress
   spec:
     containers:
       - name: nginx-ingress-controller
         image:
