Deployment/k8/networking/catalog-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-catalog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
 ingressClassName: "nginx"
 rules:
  - host: demo.com
  - http:
      paths:
      - path: /catalog/(.*)
        pathType: Prefix
        backend:
          service:
            name: catalog 
            port: 
              number: 8080
      - path: /cart/(.*) 
        pathType: Prefix
        backend:
          service:
            name: cart
            port:
              number: 8080
